[B]0.8.0[/B]
- [MODIFIED] Default background revised
- [MODIFIED] Addons view revised to grid-based layout (thanks LeviJay)
- [MODIFIED] DialogYesNo.xml button order reversed (thanks MoneyMaker)
- [NEW] File manager
- [NEW] Media Filter (video)
- [NEW] DialogPVRGuideSearch.xml
- [MODIFIED] Recent items (video / music) now uses skin widgets addon
- [MODIFIED] PVR menu integrated into main video menu
- [UPDATED] Preparation for Beta release: Strings localised and generally cleaned up
- [MODIFIED] Refresh library button moved to sidebar. Gotham and Frodo implementations tentatively supported (Thanks Yowls).
- [NEW] Cast and crew viewer added to video info
- [MODIFIED] Favourites browser tweaked
- [MODIFIED] Music player will continue playing even after music section is exited. Videos will continue to stop playback on return to video menu / homescreen (thanks LeviJay)
- [MODIFIED] Focus should now return to the titles listing rather than the source menu on end-of-playback. Some addons may be a bit flaky in this regard, I will monitor.
- Various skinwide tweaks

[B]0.7.0[/B]
- [NEW] Hide watched flag in video section (side menu toggle)
- [NEW] Global search (split across video and music)
- [NEW] Favourites browser
- [NEW] User profiles
- [MODIFIED] Home screen layout tweaked
- [MODIFIED] Hidden side menu revised
- [FIXED] Incorrect letter cases 'musicViewType' amongst a couple of others (thanks Wishie)
- [FIXED] Footer information sometimes being shown incorrectly (myVideoNav, myMusicNav) Thanks Wishie.
- [FIXED] Global background not working in music file lists
- [MODIFIED] Item information in music section now handles albums and artists more appropriately.
- [MODIFIED] Global background systems reworked and simplified. Skin now defaults to hard coded background. User can override this with a static image, or use a fanart slideshow (assuming fanart paths are set).
- [REMOVED] Animated fanart slides, except in video / music info screens. 