@@ -148,11 +148,7 @@
 					<texturenofocus>-</texturenofocus>
 					<textoffsetx>12</textoffsetx>
 				</control>
-			
-				
-					
-				
-			
+
 			</control>
 
 			<!--OK / Cancel-->
