@@ -1,4 +1,6 @@
 <window id="6">
+	<onload>action(back)</onload>
+	
 	<controls>
 		<!--removed: not used-->
 	</controls>
