@@ -1,3 +1,4 @@
 <window type="dialog" id="400">
-	<!--removed-->
+	<onload>action(back)</onload>
+	<!--removed: not used-->
 </window>
