@@ -1,150 +1,281 @@
 <window id="125">
-	<defaultcontrol always="true">2</defaultcontrol>
+	<defaultcontrol always="true">9000</defaultcontrol>
 	<allowoverlay>yes</allowoverlay>
 
 	<controls>
-
+		
+		<control type="image">
+			<posx>0</posx>
+			<posy>0</posy>
+			<width>fullscreenWidth</width>
+			<height>fullscreenHeight</height>
+			<aspectratio>stretch</aspectratio>
+			<texture>colors/black.png</texture>
+			<colordiffuse>ddFFFFFF</colordiffuse>
+			<include>fadeInOut</include>	
+		</control>
+				
 		<control type="group">
-			<posx>360</posx>
-			<posy>270</posy>
+			<posx>col-1-begin</posx>
+			<posy>row-1-begin</posy>
+			
+			<!--animations-->
+			<include>modalDialogInOutVertical</include>
+			
+			<control type="image">
+				<posx>-96</posx>
+				<posy>44</posy>
+				<width>fullscreenWidth</width>
+				<height>1-row</height>
+				<texture>colors/selected.png</texture>
+				<colordiffuse>ffffffff</colordiffuse>
+				<aspectratio>stretch</aspectratio>
+			</control>
 
 			<control type="image">
+				<posx>-3</posx>
+				<posy>44</posy>
+				<width>3</width>
+				<height>1-row</height>
+				<texture>colors/black.png</texture>
+				<colordiffuse>ffffffff</colordiffuse>
+				<aspectratio>stretch</aspectratio>
+			</control>
+
+			<control type="label">
+				<posx>12</posx>
+				<posy>47</posy>
+				<width>12-col</width>
+				<font>pageTitle</font>
+				<textcolor>black</textcolor>
+				<shadowcolor>-</shadowcolor>
+				<label>$LOCALIZE[298]</label>
+			</control>
+			
+			<!--add / clear bookmarks-->
+			<control type="panel" id="9000">
 				<posx>0</posx>
-				<posy>0</posy>
-				<width>1200</width>
-				<height>798</height>
-				<texture border="22">colors/black.png</texture>
-			</control>
-
-			<control type="label">
-				<posy>-45</posy>
-				<include>DialogID</include>
-				<label>VideoOSDBookmarks.xml</label>
-			</control>
-
-			<control type="label">
-				<description>header label</description>
-				<posx>45</posx>
-				<posy>27</posy>
-				<width>1140</width>
-				<align>center</align>
-				<label>[UPPERCASE]$LOCALIZE[298][/UPPERCASE] - ($INFO[Container(11).NumItems]) $LOCALIZE[31027] - $LOCALIZE[31028] ($INFO[Container(11).CurrentPage]/$INFO[Container(11).NumPages])</label>
-			</control>
-
-			<control type="panel" id="11">
-				<posx>60</posx>
-				<posy>83</posy>
-				<width>1080</width>
-				<height>586</height>
-				<onleft>2</onleft>
-				<onright>3</onright>
-				<ondown>2</ondown>
-				<onup>2</onup>
-				<scrolltime>200</scrolltime>
-				<viewtype label="536">icon</viewtype>
-				<pagecontrol>-</pagecontrol>
+				<posy>120</posy>
+				<width>12-col</width>
+				<height>1-row</height>
+				<itemgap>3</itemgap>
 				<orientation>horizontal</orientation>
+				<ondown>11</ondown>
 
-				<itemlayout height="293" width="360">
-
-					<control type="image">
-						<posx>3</posx>
-						<posy>3</posy>
-						<width>353</width>
-						<height>240</height>
-						<texture border="3">colors/black.png</texture>
-					</control>
+				<itemlayout width="6-col" height="1-row">
 
 					<control type="image">
-						<posx>11</posx>
-						<posy>11</posy>
-						<width>330</width>
-						<height>210</height>
-						<info>ListItem.Icon</info>
+						<posx>0</posx>
+						<posy>2</posy>
+						<width>6-col</width>
+						<height>53</height>
+						<aspectratio>stretch</aspectratio>
+						<texture>colors/black.png</texture>
 					</control>
 
 					<control type="label">
-						<posx>168</posx>
-						<posy>255</posy>
-						<width>338</width>
-						<height>23</height>
-						<align>center</align>
-						<info>ListItem.Label</info>
+						<posx>24</posx>
+						<posy>0</posy>
+						<width>1-col</width>
+						<font>symbol</font>
+						<textcolor>selected</textcolor>
+						<label>$INFO[ListItem.label2]</label>
+						<shadowcolor>-</shadowcolor>
+					</control>
+
+					<control type="label">
+						<posx>1-col</posx>
+						<posy>2</posy>
+						<width>5-col-gutter</width>
+						<font>menuTitle</font>
+						<textcolor>selected</textcolor>
+						<label>$INFO[ListItem.label]</label>
+						<shadowcolor>-</shadowcolor>
 					</control>
 
 				</itemlayout>
 
-				<focusedlayout height="293" width="360">
+				<focusedlayout width="6-col" height="1-row">
 
 					<control type="image">
-						<posx>3</posx>
-						<posy>3</posy>
-						<width>353</width>
-						<height>240</height>
-						<texture border="5">colors/selected.png</texture>
-					</control>
-
-					<control type="image">
-						<posx>11</posx>
-						<posy>11</posy>
-						<width>330</width>
-						<height>210</height>
-						<info>ListItem.Icon</info>
+						<posx>0</posx>
+						<posy>2</posy>
+						<width>6-col</width>
+						<height>53</height>
+						<aspectratio>stretch</aspectratio>
+						<texture>colors/selected.png</texture>
 					</control>
 
 					<control type="label">
-						<posx>168</posx>
-						<posy>255</posy>
-						<width>338</width>
-						<height>23</height>
-						<align>center</align>
-						<info>ListItem.Label</info>
+						<posx>24</posx>
+						<posy>0</posy>
+						<width>1-col</width>
+						<font>symbol</font>
+						<textcolor>black</textcolor>
+						<label>$INFO[ListItem.label2]</label>
+						<shadowcolor>-</shadowcolor>
+					</control>
+
+					<control type="label">
+						<posx>1-col</posx>
+						<posy>2</posy>
+						<width>5-col-gutter</width>
+						<font>menuTitle</font>
+						<textcolor>black</textcolor>
+						<label>$INFO[ListItem.label]</label>
+						<shadowcolor>-</shadowcolor>
 					</control>
 
 				</focusedlayout>
 
+				<content>	
+					<item id="1">
+						<description>Create Bookmark button</description>
+						<label>294</label>
+						<label2></label2>
+						<thumb>-</thumb>
+						<onclick>SendClick(125,2)</onclick>
+					</item>
+					
+					<item id="2">
+						<description>Clear Bookmark button</description>
+						<label>296</label>
+						<label2></label2>
+						<thumb>-</thumb>
+						<onclick>SendClick(125,3)</onclick>
+					</item>	
+					
+					<item id="3">
+						<description>Clear Bookmark button (episodes)</description>
+						<visible>videoplayer.content(episodes)</visible>
+						<label>20406</label>
+						<label2></label2>
+						<thumb>-</thumb>
+						<onclick>SendClick(125,4)</onclick>
+					</item>
+				</content>
+
+			</control>
+			
+			<!--bookmark browser: thumbs-->
+			<control type="panel" id="11">
+				<posx>0</posx>
+				<posy>216</posy>
+				<width>24-col</width>
+				<height>11-row</height>
+				<orientation>horizontal</orientation>
+				<onup>9000</onup>
+
+				<itemlayout width="6-col" height="314">
+
+					<control type="image">
+						<posx>0</posx>
+						<posy>0</posy>
+						<width>6-col-gutter</width>
+						<height>230</height>
+						<aspectratio>scale</aspectratio>
+						<texture fallback="colors/black.png" border="0">$INFO[Listitem.icon]</texture>
+						<bordertexture border="0">-</bordertexture>
+						<colordiffuse>ffFFFFFF</colordiffuse>
+					</control>
+					
+					<control type="image">
+						<posx>0</posx>
+						<posy>0</posy>
+						<width>6-col-gutter</width>
+						<height>230</height>
+						<texture>backgrounds/vignette.png</texture>
+						<colordiffuse>ffffffff</colordiffuse>
+						<aspectratio>stretch</aspectratio>
+					</control>
+																		
+					<control type="label">
+						<posx>12</posx>
+						<posy>233</posy>
+						<width>6-col-gutter</width>
+						<font>itemTitle</font>
+						<textcolor>selected</textcolor>
+						<label>$INFO[ListItem.Label]</label>
+					</control>
+		
+				</itemlayout>
+
+				<focusedlayout width="6-col" height="314">
+
+					<control type="image">
+						<posx>0</posx>
+						<posy>0</posy>
+						<width>6-col-gutter</width>
+						<height>230</height>
+						<aspectratio>scale</aspectratio>
+						<texture fallback="colors/black.png" border="0">$INFO[Listitem.icon]</texture>
+						<bordertexture border="0">-</bordertexture>
+						<colordiffuse>ffFFFFFF</colordiffuse>
+					</control>
+					
+					<control type="image">
+						<posx>0</posx>
+						<posy>0</posy>
+						<width>6-col-gutter</width>
+						<height>230</height>
+						<texture>backgrounds/vignette.png</texture>
+						<colordiffuse>ffffffff</colordiffuse>
+						<aspectratio>stretch</aspectratio>
+						<animation effect="fade" start="0" end="100" time="500" reversible="false">focus</animation>
+					</control>
+					
+					<control type="image">
+						<posx>0</posx>
+						<posy>233</posy>
+						<width>6-col-gutter</width>
+						<height>1-row</height>
+						<aspectratio>stretch</aspectratio>
+						<texture>colors/selected.png</texture>
+						<bordersize>0</bordersize>
+						<colordiffuse>ffFFFFFF</colordiffuse>
+					</control>
+									
+					<control type="label">
+						<posx>12</posx>
+						<posy>233</posy>
+						<width>6-col-gutter</width>
+						<font>itemTitle</font>
+						<textcolor>black</textcolor>
+						<label>$INFO[ListItem.Label]</label>
+						<shadowcolor>-</shadowcolor>
+					</control>
+					
+				</focusedlayout>
+
+			</control>
+			
+		</control>
+		
+		
+		<!--dialog controls-->
+		<control type="group">
+			<visible>false</visible>
+
+			<control type="button" id="2">
+				<description>Create Bookmark button</description>
 			</control>
 
-			<control type="grouplist" id="9000">
-				<posx>30</posx>
-				<posy>683</posy>
-				<width>1140</width>
-				<height>66</height>
-				<itemgap>3</itemgap>
-				<align>center</align>
-				<orientation>horizontal</orientation>
-				<onleft>9000</onleft>
-				<onright>9000</onright>
-				<onup>11</onup>
-				<ondown>11</ondown>
+			<control type="button" id="3">
+				<description>Clear Bookmark button</description>
+			</control>
 
-				<control type="button" id="2">
-					<description>Create Bookmark button</description>
-					<label>294</label>
-					<width>375</width>
-					<include>ButtonInfoDialogsCommonValues</include>
-				</control>
-
-				<control type="button" id="3">
-					<description>Clear Bookmark button</description>
-					<label>296</label>
-					<width>375</width>
-					<include>ButtonInfoDialogsCommonValues</include>
-				</control>
-
-				<control type="button" id="4">
-					<description>Clear Bookmark button</description>
-					<label>20406</label>
-					<width>375</width>
-					<include>ButtonInfoDialogsCommonValues</include>
-					<visible>videoplayer.content(episodes)</visible>
-				</control>
-
+			<control type="button" id="4">
+				<description>Clear Bookmark button</description>
 			</control>
 
 		</control>
 
+		<!--debugging-->
 		<include>Debug_Grid</include>
+		<control type="label">
+			<include>DialogID</include>
+			<label>VideoOSDBookmarks.xml</label>
+		</control>
 
 	</controls>
 
