@@ -1,3 +1,7 @@
+[B]0.9.0[/B]
+- [NEW] Video bookmarks (videoOSDBookmarks.xml)
+
+
 [B]0.8.0[/B]
 - [MODIFIED] Default background revised
 - [MODIFIED] Addons view revised to grid-based layout (thanks LeviJay)
